# sdl3-cmake-setup

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp  texture.hpp  util.cpp  util.hpp
src/window/: window.cpp  window.hpp  window_create.cpp  window_render.cpp
